[gd_scene load_steps=2 format=3 uid="uid://dgc2pqvd2f3yk"]

[ext_resource type="Script" path="res://Scripts/ideology_selection.gd" id="1_q11ib"]

[node name="IdeologySelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q11ib")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 108.0
offset_top = 8.0
offset_right = 93.275
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="PautaLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 428.0
offset_top = 29.0
offset_right = 734.0
offset_bottom = 52.0
text = "Selecione suas Pautas Governamentais:"

[node name="Confirm" type="Button" parent="Control"]
layout_mode = 0
offset_left = 498.0
offset_top = 176.0
offset_right = 648.0
offset_bottom = 216.0
text = "Confirm
"

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 65.0
offset_top = 70.0
offset_right = 1065.0
offset_bottom = 160.0

[node name="Button" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button3" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button4" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button5" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button6" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button7" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button8" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
